clinic management / list - delete - makePremium & deletePremium methods added

--- a/src/views/admin/partials/aside.ejs
+++ b/src/views/admin/partials/aside.ejs
@@ -79,7 +79,7 @@
       </ul>
     </li>
     <!--====== Location-Map VİEW BAR ======-->
-    <li class="slide">
+    <!-- <li class="slide">
       <a class="side-menu__item" data-toggle="slide" href="#">
         <svg class="side-menu__icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
           fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -93,7 +93,7 @@
         <li><a href="#" class="slide-item">Konum ve Yakındaki Yerler Listesi</a></li>
         <li><a href="#" class="slide-item">Ulaşım Türü Altenatifleri</a></li>
       </ul>
-    </li>
+    </li> -->
     <!--====== Center VİEW BAR ======-->
     <li class="slide">
       <a class="side-menu__item" data-toggle="slide" href="#">
@@ -122,7 +122,7 @@
         </svg>
         <span class="side-menu__label">Kasa Yönetimi</span><i class="angle fa fa-angle-right"></i></a>
       <ul class="slide-menu">
-        <li><a href="/admin/debtor" class="slide-item">Borçlular Hesabı</a></li>
+        <!-- <li><a href="/admin/debtor" class="slide-item">Borçlular Hesabı</a></li> -->
         <li><a href="/admin/invoice-list" class="slide-item">Yapılmış Ödemeler</a></li>
         <li><a href="/admin/center-spend" class="slide-item">Merkez Harcamaları</a></li>
       </ul>
