added faq management paneş

--- a/src/views/admin/layouts/index.ejs
+++ b/src/views/admin/layouts/index.ejs
@@ -12,7 +12,7 @@
     content="Admin, Admin Template, Dashboard, Responsive, Admin Dashboard, Bootstrap, Bootstrap 4, Clean, Backend, Jquery, Modern, Web App, Admin Panel, Ui, Premium Admin Templates, Flat, Admin Theme, Ui Kit, Bootstrap Admin, Responsive Admin, Application, Template, Admin Themes, Dashboard Template" />
 
   <!-- Title -->
-  <title>Dashtic - Bootstrap Webapp Responsive Dashboard Simple Admin Panel Premium HTML5 Template</title>
+  <title>Dialysing.com | Ana Yönetim Paneli</title>
 
   <!--Favicon -->
   <link rel="icon" href="../admin/images/brand/favicon.ico" type="image/x-icon" />
@@ -113,27 +113,24 @@
   <script src="../admin/plugins/p-scrollbar/p-scrollbar.js"></script>
   <script src="../admin/plugins/p-scrollbar/p-scroll1.js"></script>
 
-  		<!-- Data tables -->
-      <script src="../admin/plugins/datatable/js/jquery.dataTables.js"></script>
-      <script src="../admin/plugins/datatable/js/dataTables.bootstrap4.js"></script>
-      <script src="../admin/plugins/datatable/js/dataTables.buttons.min.js"></script>
-      <script src="../admin/plugins/datatable/js/buttons.bootstrap4.min.js"></script>
-      <script src="../admin/plugins/datatable/js/jszip.min.js"></script>
-      <script src="../admin/plugins/datatable/js/pdfmake.min.js"></script>
-      <script src="../admin/plugins/datatable/js/vfs_fonts.js"></script>
-      <script src="../admin/plugins/datatable/js/buttons.html5.min.js"></script>
-      <script src="../admin/plugins/datatable/js/buttons.print.min.js"></script>
-      <script src="../admin/plugins/datatable/js/buttons.colVis.min.js"></script>
-      <script src="../admin/plugins/datatable/dataTables.responsive.min.js"></script>
-      <script src="../admin/plugins/datatable/responsive.bootstrap4.min.js"></script>
-      <script src="../admin/js/datatables.js"></script>
-  
-		<!-- Accordion js-->
-		<script src="../admin/plugins/accordion/accordion.min.js"></script>
-		<script src="../admin/js/accordion.js"></script>
+  <!-- Data tables -->
+  <script src="../admin/plugins/datatable/js/jquery.dataTables.js"></script>
+  <script src="../admin/plugins/datatable/js/dataTables.bootstrap4.js"></script>
+  <script src="../admin/plugins/datatable/js/dataTables.buttons.min.js"></script>
+  <script src="../admin/plugins/datatable/js/buttons.bootstrap4.min.js"></script>
+  <script src="../admin/plugins/datatable/js/jszip.min.js"></script>
+  <script src="../admin/plugins/datatable/js/pdfmake.min.js"></script>
+  <script src="../admin/plugins/datatable/js/vfs_fonts.js"></script>
+  <script src="../admin/plugins/datatable/js/buttons.html5.min.js"></script>
+  <script src="../admin/plugins/datatable/js/buttons.print.min.js"></script>
+  <script src="../admin/plugins/datatable/js/buttons.colVis.min.js"></script>
+  <script src="../admin/plugins/datatable/dataTables.responsive.min.js"></script>
+  <script src="../admin/plugins/datatable/responsive.bootstrap4.min.js"></script>
+  <script src="../admin/js/datatables.js"></script>
 
-		<!-- Custom js-->
-		<script src="../admin/js/custom.js"></script>
+
+	<!-- Custom js-->
+	<script src="../admin/js/custom.js"></script>
 </body>
 
 </html>
