--- a/src/views/clinic-panel/layouts/panel.ejs
+++ b/src/views/clinic-panel/layouts/panel.ejs
@@ -29,6 +29,11 @@
   <link rel="stylesheet" href="../user/css/clinic/index.css" />
   <link rel="stylesheet" href="../user/css/panel.css">
 
+  <!-- Fullcalendar css-->
+  <link href='../admin/plugins/fullcalendar/fullcalendar.css' rel='stylesheet' />
+  <link href='../admin/plugins/fullcalendar/fullcalendar.print.min.css' rel='stylesheet' media='print' />
+
+
   <!-- Bootstrap 5.0-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
@@ -88,7 +93,12 @@
   <!-- Custom js for this page-->
   <script src="../clinic-panel/js/dashboard.js"></script>
   <script src="../clinic-panel/js/Chart.roundedBarCharts.js"></script>
-  <!-- End custom js for this page-->
+  
+  		<!-- Full-calendar js-->
+      <script src='../admin/plugins/fullcalendar/moment.min.js'></script>
+      <script src='../admin/plugins/fullcalendar/fullcalendar.min.js'></script>
+      <script src="../admin/js/app-calendar-events.js"></script>
+      <script src="../admin/js/app-calendar.js"></script>
 </body>
 
 </html>
