changed index cleander

--- a/src/views/clinic-panel/pages/panel/calender.ejs
+++ b/src/views/clinic-panel/pages/panel/calender.ejs
@@ -6,10 +6,10 @@
         <div class="tm-section-title">
           <div class="form-group calendar-seans-choose">
             <select name="month" class="form-control" id="month">
-              <option value="">Sabah Seansı</option>
+              <option value="0">Sabah Seansı</option>
               <option value="1">Öğlen Seansı</option>
               <option value="2">Akşam Seansı</option>
-              <option value="2">Gece Seansı</option>
+              <option value="3">Gece Seansı</option>
             </select>
           </div>
         </div>
