--- a/src/views/clinic-panel/pages/panel/index.ejs
+++ b/src/views/clinic-panel/pages/panel/index.ejs
@@ -277,7 +277,8 @@
                       </svg>
                     </button>
                   <input type=button id="sonuc" value="2022">
-                  <button type=button onclick="arttir()" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+                  <button type=button onclick="arttir()" >
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"/>
                   </svg></button> 
                   </div>
@@ -371,7 +372,6 @@
                     var sonuc = document.getElementById("sonuc");
                     sonuc.value = Number(sonuc.value) - 1;
                   }
-
                 </script>
               </div>
             </div>
@@ -381,7 +381,7 @@
     </div>
   </div>
   <!-- content-wrapper ends -->
-  <div id="calendar"></div>
+  
   <div id="suggestion">
     <div class="container">
       <div class="row">
