--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -31,7 +31,10 @@ ul {
   width: 40px;
   height: 20px;
 }
-
+.önlem {
+  font-size: 9px; 
+  color: #025d9193;
+}
 .tm-switch input {
   opacity: 0;
   width: 0;
