--- a/src/views/user/pages/clinic/single-clinic.ejs
+++ b/src/views/user/pages/clinic/single-clinic.ejs
@@ -837,7 +837,16 @@
     </div>
   </div>
 </div>
-
+<div class="container tm-p-4 d-flex align-items-center justify-content-center">
+<div class="row col-sm-12 col-md-12 col-lg-12 col-xl-12 mb-3">
+<div class="alert alert-danger" role="alert">
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-circle mx-2" viewBox="0 0 16 16">
+    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+    <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"/>
+  </svg>Merkezin güncel bilgileri hakkında bir yanlışlık olduğunu mu düşünüyorsunuz? Hemen <a href="" class="mx-1"> hata bildirebilirsiniz</a>.
+</div>
+</div>
+</div>
 <!--======= PARTNER =====-->
 <div id="section-x" class="tm-bg-white tm-p">
   <div class="container">
