added gfr hesaplama page

--- a/src/views/user/partials/top-navbar-blog.ejs
+++ b/src/views/user/partials/top-navbar-blog.ejs
@@ -31,7 +31,7 @@
                                 </li>
                                 <% if (!user) { %>
                                 <li class="nav-item buttons mb-3">
-                                    <a href="../user/register/register.html" class="nav-link btn-second">Kayıt Ol</a>
+                                    <a href="/register" class="nav-link btn-second">Kayıt Ol</a>
                                 </li> 
                                 <% } %>
                                 <% if (user) { %>
