--- a/src/views/user/pages/index.ejs
+++ b/src/views/user/pages/index.ejs
@@ -102,7 +102,7 @@
       </div>
       <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
         <div class="tm-box">
-          <a href="#"><img src="../user/img/custom/dialysis-v.png" alt="Dialysis V" /></a>
+          <a href="/gfr-calculator"><img src="../user/img/custom/dialysis-v.png" alt="Dialysis V" /></a>
           <div class="tm-box-content">
             <div key="articleSubTitle5" class="tm-box-title">GFR Hesaplama</div>
             <div key="articlesSubText5" class="tm-box-text">Eget ut netus aliquet platea auctor volutpat est dictum mattis ac enim eget duis sit a, ac urna, tortor tincidunt mauris adipiscing facilisis ultricies aliquet sit imperdiet non sed lectus</div>
