index deki clinic linklendirmeler basariyla yapildi.

--- a/src/views/clinic-panel/pages/panel/clinic-point.ejs
+++ b/src/views/clinic-panel/pages/panel/clinic-point.ejs
@@ -58,14 +58,14 @@
 
             <hr class="custom" />
 
-            <div class="clinic-points">
+            <!-- <div class="clinic-points">
               <div class="circle"></div>
               <div>
                 <div class="clinic-point-title">Merkezinize Yakın Lokasyonlar Hakkında Bilgi Verin</div>
                 <div class="clinic-point-process">Lütfen merkezinizin çevresinde yer alan lokasyonları ekleyin.</div>
               </div>
             </div>
-            <hr class="custom" />
+            <hr class="custom" /> -->
 
             <div class="clinic-points">
               <% if (center.companyInformation.photo.length > 4) { %>
@@ -149,7 +149,7 @@
                 <% } %>
               </div>
             </div>
-            <hr class="custom" />
+            <!-- <hr class="custom" />
 
             <div class="clinic-points">
               <div class="circle"></div>
@@ -157,7 +157,7 @@
                 <div class="clinic-point-title">Gelen Kutunuzu Kontrol Edin</div>
                 <div class="clinic-point-process">Hastalarınızın sorularına çözüm üretmek sizi değerli kılar.</div>
               </div>
-            </div>
+            </div> -->
             <hr class="custom" />
 
             <div class="clinic-points">
