--- a/src/views/user/pages/index.ejs
+++ b/src/views/user/pages/index.ejs
@@ -11,7 +11,7 @@
         <div class="tm-box card">
           <img src="../user/img/custom/istanbul-anadolu.png" alt="Custom Istanbul Anadolu" />
           <div class="tm-box-content">
-            <div class="tm-box-title"><a href="./clinic/clinic-list.html"><%- city._id.city %> </a></div>
+            <div class="tm-box-title"><a href="./clinic/clinic-list?city=<%- city._id.city %> "><%- city._id.city %> </a></div>
             <div class="tm-box-text"> <%- city.count  %>  <span key="dialysCenter">Diyaliz Merkezi</span></div>
           </div>
         </div>
