removed app clinic list

--- a/src/views/user/pages/clinic/clinic-list.ejs
+++ b/src/views/user/pages/clinic/clinic-list.ejs
@@ -230,7 +230,7 @@
                   <div class="clinic-center-point">
                     <div class="point">
                       <div class="title">Çok İyi</div>
-                      <div class="text">2500 inceleme</div>
+                      <!-- <div class="text">2500 inceleme</div> -->
                     </div>
                     <div class="circle">9.8</div>
                   </div>
@@ -260,8 +260,8 @@
               </div>
               <div class="clinic-center-box-content3">
                 <div class="left">
-                  <div class="attention"><img src="../user/img/clinic/icons/attention.png" alt="Icon Attention" />Seçtiğiniz tarihlerde son 2 adet uygun seans kalmıştır.</div>
-                  <div class="users"><img src="../user/img/clinic/icons/3-User.png" alt="Icon 3-User" />Bu ay 15 kişi bu diyaliz merkezini inceledi</div>
+                  <!-- <div class="attention"><img src="../user/img/clinic/icons/attention.png" alt="Icon Attention" />Seçtiğiniz tarihlerde son 2 adet uygun seans kalmıştır.</div> -->
+                  <!-- <div class="users"><img src="../user/img/clinic/icons/3-User.png" alt="Icon 3-User" />Bu ay 15 kişi bu diyaliz merkezini inceledi</div> -->
                 </div>
                 <div class="right">
                   <a href="/clinic/<%- element._id %>" class="btn btn-second">Randevu Oluştur</a>
