--- a/src/views/user/pages/index.ejs
+++ b/src/views/user/pages/index.ejs
@@ -6,16 +6,18 @@
       <a href="./clinic/all" class="tm-show-all-link" key="allView">Tümünü Görüntüle</a>
     </div>
     <div class="row">
-      <% cities.forEach(city => { %> <% if (country == city._id.country) { %>
+      <% cities.forEach((city, index) => { %> <% if (country == city._id.country) { %> <% if (index < 5) { %>
       <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
         <div class="tm-box card">
           <img src="../user/img/custom/istanbul-anadolu.png" alt="Custom Istanbul Anadolu" />
           <div class="tm-box-content">
             <div class="tm-box-title"><a href="./clinic/clinic-list?city=<%- city._id.city %> "><%- city._id.city %> </a></div>
-            <div class="tm-box-text"> <%- city.count  %>  <span key="dialysCenter">Diyaliz Merkezi</span></div>
+            <div class="tm-box-text"><%- city.count %> <span key="dialysCenter">Diyaliz Merkezi</span></div>
           </div>
         </div>
       </div>
+      <% } %>
+
       <!-- <p class="city"><a href="/clinic/clinic-list?city=<%- city._id.city  %>"><%- city._id.city %></a> <span>( <%- city.count %> )</span></p> -->
       <% } %> <% }) %>
 
