--- a/src/views/user/pages/gfr-calculator.ejs
+++ b/src/views/user/pages/gfr-calculator.ejs
@@ -127,13 +127,14 @@
               <div class="gfr-content">
                   <p class="gfr-content-text">KBH'nin erken evrelerinde (1-2) hasta asemptomatiktir, kandaki
                       kreatinin düzeyi normaldir (veya normale yakındır) ve kalan nefronlarda adaptif
-                      fonksiyon artışı ile sıvı, asit-baz ve elektrolit dengesi korunur. 1. aşamada, GFR'nin
-                      normal olduğu ancak albüminüri (idrarda anormal bir albümin kaybı) gibi böbrek hasarı
+                      fonksiyon artışı ile sıvı, asit-baz ve elektrolit dengesi korunur. 
+                      <p class="gfr-content-text">Evre 1</p> 
+                      1. aşamada, GFR'nin normal olduğu ancak albüminüri (idrarda anormal bir albümin kaybı) gibi böbrek hasarı
                       belirtileri vardır. KBH'nin seyrini yavaşlatmak ve hatta geri döndürmek için tanıyı
                       almak ve tedaviye erken başlamak çok önemlidir.
                   </p>
 
-                  <p class="gfr-content-text">Evre</p>
+                  <p class="gfr-content-text">Evre 2</p>
 
                   <p class="gfr-content-text">Böbrek fonksiyonu ve belirtileri açısından evre 1'e benzer.
                       Kalan nefronlar hala insan vücudunun homeostazını koruyabildiğinden ve herhangi bir
