changing error alert

--- a/src/views/user/pages/clinic/single-clinic.ejs
+++ b/src/views/user/pages/clinic/single-clinic.ejs
@@ -837,7 +837,7 @@
     </div>
   </div>
 </div>
-<div class="container tm-p-4 d-flex align-items-center justify-content-center">
+<!-- <div class="container tm-p-4 d-flex align-items-center justify-content-center">
 <div class="row col-sm-12 col-md-12 col-lg-12 col-xl-12 mb-3">
 <div class="alert alert-danger" role="alert">
   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-circle mx-2" viewBox="0 0 16 16">
@@ -846,7 +846,7 @@
   </svg>Merkezin güncel bilgileri hakkında bir yanlışlık olduğunu mu düşünüyorsunuz? Hemen <a href="#" class="mx-1"> hata bildirebilirsiniz</a>.
 </div>
 </div>
-</div>
+</div> -->
 <!--======= PARTNER =====-->
 <div id="section-x" class="tm-bg-white tm-p">
   <div class="container">
